Fix chat visibility

--- a/src/app/pages/admin-page/admin-page.component.scss
+++ b/src/app/pages/admin-page/admin-page.component.scss
@@ -5,6 +5,7 @@
 }
 
 .content {
+  position: relative;
   flex: 1;
 
   margin-left: 5rem;
@@ -14,13 +15,29 @@
   transition: transform 500ms ease-in-out;
 }
 
-.content.chat {
-  transform: translateY(-100%);
+//.content.chat {
+//  transform: translateY(-100%);
+//}
+
+.content.chat .page {
+  --offset: -100%
 }
 
 .page {
-  width: 100%;
-  height: 100%;
+  position: absolute;
+  inset: 0;
+  transform: translateY(calc(var(--initial-translate) + var(--offset, 0%)));
+  transition: transform 500ms ease-in-out;
+  //width: 100%;
+  //height: 100%;
+}
+
+.page:first-of-type {
+  --initial-translate: 0%;
+}
+
+.page:last-of-type {
+  --initial-translate: 100%;
 }
 
 
